[tool.poetry]
name = "pentagraph"
version = "0.0.1b4"
description = "Graph representation and tools for programming with pentagame."
authors = ["Cobalt <Chaosthe0rie@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
networkx = "^2.5"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
black = "^20.8b1"
click = "^7.1.2"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
