[tool.poetry]
name = "pentagraph-docs"
version = "0.1.0"
description = "Documentation and website for pentagraph"
authors = ["Cobalt <Chaosthe0rie@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pelican = "^4.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
